--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
 }
@@ -48,3 +48,4 @@ ol, ul {
 .game-info {
   margin-left: 20px;
 }
+*/
